--- a/GUI/ui/gui_menu.ui
+++ b/GUI/ui/gui_menu.ui
@@ -81,6 +81,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="logoutPushButton">
+        <property name="text">
+         <string>Log out</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
@@ -91,14 +98,14 @@
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="newdocPushButton">
         <property name="text">
          <string>New document</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="opendocPushButton">
         <property name="text">
          <string>Open document</string>
         </property>
