Gestione immagini per icone

--- a/GUI/images/images.qrc
+++ b/GUI/images/images.qrc
@@ -1,5 +1,9 @@
 <RCC>
-    <qresource prefix="/icon">
+    <qresource prefix="/icons">
         <file>Mew.png</file>
+        <file>Celebi.png</file>
+        <file>Jirachi.png</file>
+        <file>Manaphy.png</file>
+        <file>Victini.png</file>
     </qresource>
 </RCC>
