--- a/GUI/ui/gui_profile.ui
+++ b/GUI/ui/gui_profile.ui
@@ -69,7 +69,14 @@
        <item row="0" column="1">
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
-          <widget class="QComboBox" name="iconComboBox"/>
+          <widget class="QComboBox" name="iconComboBox">
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item>
           <spacer name="horizontalSpacer_3">
