Aggiunto tab widget
Ho raggruppato 2 window dentro un tab widget nel menù, diversamente dalla bozza origiale di GUI

--- a/GUI/ui/gimpdocs.ui
+++ b/GUI/ui/gimpdocs.ui
@@ -1,20 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>GIMPdocs</class>
- <widget class="QDialog" name="GIMPdocs" >
-  <property name="geometry" >
+ <widget class="QDialog" name="GIMPdocs">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>600</width>
+    <height>450</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>GIMPdocs</string>
   </property>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
