Controllo update e cambiato Qdialog
Ho aggiunto il controllo sull'update dell'user e cambiato la QDialog principale con una QMainWindow.

--- a/GUI/ui/gimpdocs.ui
+++ b/GUI/ui/gimpdocs.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>GIMPdocs</class>
- <widget class="QDialog" name="GIMPdocs">
+ <widget class="QMainWindow" name="GIMPdocs">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,8 +13,19 @@
   <property name="windowTitle">
    <string>GIMPdocs</string>
   </property>
+  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>600</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
