Modificato tab open document. Aggiunta finestra editor
Più un po' di altre piccole cose che neanche mi ricordo tutte. Comunque devo finire i collegamenti tra il menù e la nuova finestra

--- a/GUI/ui/gui_menu.ui
+++ b/GUI/ui/gui_menu.ui
@@ -120,6 +120,12 @@
          </attribute>
         </widget>
         <widget class="QWidget" name="opendocTab">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="autoFillBackground">
           <bool>true</bool>
          </property>
