--- a/GUI/ui/gui_newdoc.ui
+++ b/GUI/ui/gui_newdoc.ui
@@ -56,7 +56,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEdit">
+      <widget class="QLineEdit" name="nameLineEdit">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -82,7 +82,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="createPushButton">
        <property name="text">
         <string>Create</string>
        </property>
