--- a/CLIENT/GUI/ui/gui_editorwindow.ui
+++ b/CLIENT/GUI/ui/gui_editorwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>GIMPdocs - Editor</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout"/>
