--- a/CLIENT/GUI/ui/gui_login.ui
+++ b/CLIENT/GUI/ui/gui_login.ui
@@ -174,6 +174,12 @@
              <property name="text">
               <string>Log in</string>
              </property>
+             <property name="autoDefault">
+              <bool>true</bool>
+             </property>
+             <property name="default">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item>
