Modifiche alla barra Users
E' ancora un work in progress, ma lo finirò nel mio prossimo branch

--- a/CLIENT/GUI/ui/gui_editor.ui
+++ b/CLIENT/GUI/ui/gui_editor.ui
@@ -26,7 +26,7 @@
    <item>
     <widget class="QWidget" name="usersMenuWidget" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -107,13 +107,25 @@
       </property>
       <item>
        <widget class="QLabel" name="numberUsersLabel">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
-         <string>3</string>
+         <string>0</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
          <string>Users</string>
         </property>
@@ -133,6 +145,9 @@
        <spacer name="horizontalSpacer_5">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Preferred</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
