--- a/CLIENT/GUI/ui/gui_editorwindow.ui
+++ b/CLIENT/GUI/ui/gui_editorwindow.ui
@@ -14,7 +14,20 @@
    <string>GIMPdocs - Editor</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout"/>
+   <layout class="QGridLayout" name="gridLayout">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -29,7 +42,7 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionHello"/>
+    <addaction name="closeDocumentAction"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
@@ -43,9 +56,9 @@
    <addaction name="menuEdit"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionHello">
+  <action name="closeDocumentAction">
    <property name="text">
-    <string>Hello</string>
+    <string>Close document</string>
    </property>
   </action>
   <action name="actionCopy">
