Colored cursors - Part 1
C'è un singolo cursore colorato lampeggiante che sostituisce l'originale

--- a/CLIENT/GUI/ui/gui_texteditorwidget.ui
+++ b/CLIENT/GUI/ui/gui_texteditorwidget.ui
@@ -27,7 +27,11 @@
     <number>0</number>
    </property>
    <item row="0" column="0">
-    <widget class="QTextEdit" name="textEdit"/>
+    <widget class="QTextEdit" name="textEdit">
+     <property name="styleSheet">
+      <string notr="true">color: rgb(128, 185, 255);</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
