--- a/CLIENT/GUI/ui/gui_menu.ui
+++ b/CLIENT/GUI/ui/gui_menu.ui
@@ -53,11 +53,17 @@
       </item>
       <item>
        <widget class="QLabel" name="nicknameLabel">
+        <property name="cursor">
+         <cursorShape>IBeamCursor</cursorShape>
+        </property>
         <property name="text">
          <string>&lt;nickname&gt;</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
         </property>
        </widget>
       </item>
