--- a/CLIENT/GUI/images/images.qrc
+++ b/CLIENT/GUI/images/images.qrc
@@ -5,5 +5,7 @@
         <file>Jirachi.png</file>
         <file>Manaphy.png</file>
         <file>Victini.png</file>
+        <file>Diancie.png</file>
+        <file>Marshadow.png</file>
     </qresource>
 </RCC>
