--- a/CLIENT/GUI/ui/gui_profile.ui
+++ b/CLIENT/GUI/ui/gui_profile.ui
@@ -112,6 +112,9 @@
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
           <widget class="QComboBox" name="iconComboBox">
+           <property name="maxVisibleItems">
+            <number>4</number>
+           </property>
            <property name="iconSize">
             <size>
              <width>32</width>
